# Lox-modern-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  benchmark.sh  config.h.in  coverage.sh  main.cpp
.github/workflows/: main.yml
benchmark/: CMakeLists.txt  equality.cpp  fib.cpp  fibonacci.cpp  hash_table_benchmark.cpp  helper.h  main.cpp  program_benchmark.cpp  string_equality.cpp  sum.lox  sum.py  value_benchmark.cpp  vector_benchmark.cpp  vector_tests.cpp
cmake/: CodeCoverage.cmake  UpdateSubmodules.cmake  catch2.cmake  coverage.cmake  doctest.cmake
examples/: precedence.lox  unexpected_character.lox
examples/assignment/: grouping.lox  infix_operator.lox  prefix_operator.lox  undefined.lox
examples/call/: bool.lox  nil.lox  num.lox  string.lox
examples/expressions/: evaluate.lox
examples/for/: class_in_body.lox  closure_in_body.lox  fun_in_body.lox  scope.lox  statement_condition.lox  statement_increment.lox  statement_initializer.lox  syntax.lox  var_in_body.lox
examples/function/: body_must_be_block.lox  extra_arguments.lox  local_mutual_recursion.lox  local_recursion.lox  missing_arguments.lox  missing_comma_in_parameters.lox  parameters.lox  print.lox  recursion.lox  too_many_arguments.lox  too_many_parameters.lox
examples/if/: class_in_else.lox  class_in_then.lox  fun_in_else.lox  fun_in_then.lox  truth.lox  var_in_else.lox  var_in_then.lox
examples/limit/: loop_too_large.lox  no_reuse_constants.lox  stack_overflow.lox  too_many_constants.lox  too_many_locals.lox  too_many_upvalues.lox
examples/logical_operator/: and.lox  or.lox  or_truth.lox
examples/number/: decimal_point_at_eof.lox  leading_dot.lox  literals.lox  trailing_dot.lox
examples/operator/: add.lox  add_bool_nil.lox  add_bool_num.lox  add_bool_string.lox  add_nil_nil.lox  add_num_nil.lox  add_string_nil.lox  divide.lox  divide_nonnum_num.lox  divide_num_nonnum.lox  greater_nonnum_num.lox  greater_num_nonnum.lox  greater_or_equal_nonnum_num.lox  greater_or_equal_num_nonnum.lox  less_nonnum_num.lox  less_num_nonnum.lox  less_or_equal_nonnum_num.lox  less_or_equal_num_nonnum.lox  multiply.lox  multiply_nonnum_num.lox  multiply_num_nonnum.lox  negate.lox  negate_nonnum.lox  subtract.lox  subtract_nonnum_num.lox  subtract_num_nonnum.lox
examples/print/: missing_argument.lox
examples/return/: at_top_level.lox
examples/string/: error_after_multiline.lox  unterminated.lox
examples/variable/: collide_with_parameter.lox  duplicate_local.lox  duplicate_parameter.lox  undefined_global.lox  undefined_local.lox  use_false_as_var.lox  use_local_in_initializer.lox  use_nil_as_var.lox  use_this_as_var.lox
examples/while/: class_in_body.lox  closure_in_body.lox  fun_in_body.lox  syntax.lox  var_in_body.lox
include/: cache.h  chunk.h  compiler.h  contract.h  exception.h  expression.h  gc.h  hash_table.h  heap.h  instruction.h  interpreter.h  list.h  native.h  object.h  opcode.h  parser.h  program.h  resolver.h  scanner.h  stack.h  statement.h  to_string.h  token.h  type_list.h  types.h  value.h  variant.h  variant_storage.h  vector.h  virtual_machine.h  vm.h
lox/benchmark/: sum.lox
src/: CMakeLists.txt  chunk.cpp  compiler.cpp  expression.h  main.cpp  parser.h  scanner.cpp  scanner.h  to_string.cpp  value.cpp  vm.cpp
tests/: CMakeLists.txt  assignment_tests.cpp  block_tests.cpp  bool_tests.cpp  cache_tests.cpp  call_tests.cpp  chunk_tests.cpp  closure_tests.cpp  comments_tests.cpp  compiler_tests.cpp  expression_tests.cpp  for_tests.cpp  function_tests.cpp  gc_tests.cpp  hash_table_tests.cpp  heap_tests.cpp  helper.h  if_tests.cpp  interpreter_tests.cpp  limit_tests.cpp  list_tests.cpp  lox_tests.cpp  native_tests.cpp  number_tests.cpp  object_tests.cpp  opcode_tests.cpp  operator_tests.cpp  parser_tests.cpp  performance.h  precedence_tests.cpp  print_tests.cpp  program_tests.cpp  resolver_tests.cpp  return_tests.cpp  scanner_tests.cpp  stack_tests.cpp  statement_tests.cpp  string_tests.cpp  to_string_tests.cpp  token_tests.cpp  (+7 more)
tools/: CMakeLists.txt
